yaml file changes

--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -29,8 +29,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
 
-      - name: Push to Docker
-        uses: mr-smithers-excellent/docker-build-push@v6
+      - uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: heyrajesh/github-action
           registry: docker.io
