--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -29,9 +29,9 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
 
-      - uses: mr-smithers-excellent/docker-build-push@v6
-        with:
-          image: heyrajesh/github-action
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - uses: mr-smithers-excellent/docker-build-push@v6
+      #   with:
+      #     image: heyrajesh/github-action
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
